# smart-traffic-management

./: README.md
backend/: CMakeLists.txt
backend/src/: traffic_engine.cpp  traffic_engine.h  vehicle_detection.h
