cmake_minimum_required(VERSION 3.10)\n\n# Set the project name and version\nproject(SmartTrafficManagement VERSION 1.0)\n\n# Specify the C++ standard\nset(CMAKE_CXX_STANDARD 11)\nset(CMAKE_CXX_STANDARD_REQUIRED True)\n\n# Add executable\nadd_executable(SmartTrafficManagement main.cpp)\n\n# Include directories\ninclude_directories(include)\n\n# Link libraries\n# target_link_libraries(SmartTrafficManagement some_library)\n